[package]
name = "sheet-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
ndarray = "0.15.6"
rayon = "1.10.0"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"
